# blueos-cloud-upload

./: DROPBOX_SETUP_GUIDE.md  Dockerfile  README.md  test_cloud_upload.py  test_dropbox.py  verify_dropbox_token.py
app/: main.py  pyproject.toml  settings.py
app/static/: index.html  register_service
