[project]
name = "blueos-cloud-upload-extension"
version = "0.0.1"
description = "BlueOS Cloud Upload Extension"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "dropbox"
]